[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Level1/feather.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Collectible.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Bounce"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ), Vector2( 0, -80 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FakeRotate"
loop = true

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 94.4699, 53.2675 )

[node name="Collectible" type="Area2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimationPlayer" parent="."]
anims/Bounce = SubResource( 1 )
anims/FakeRotate = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -6.2363, 28.7315 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Collectible_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
